tests/format/misc/errors/flow/spread-with-optional.js
type T = [...foo?: S]; // ERROR
